src/test/ui/attributes/doc-attr2.stderr
error: `#![doc(test(...)]` is only allowed as a crate-level attribute
  --> $DIR/doc-attr2.rs:4:7
   |
LL | #[doc(test(no_crate_inject))]
   |       ^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/doc-attr2.rs:2:9
   |
LL | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(invalid_doc_attributes)]` implied by `#[deny(warnings)]`
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #82730 <https://github.com/rust-lang/rust/issues/82730>

error: `#![doc(test(...)]` is only allowed as a crate-level attribute
  --> $DIR/doc-attr2.rs:9:12
   |
LL |     #![doc(test(no_crate_inject))]
   |            ^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #82730 <https://github.com/rust-lang/rust/issues/82730>

error: aborting due to 2 previous errors

